--- a/home.html
+++ b/home.html
@@ -50,6 +50,17 @@
             </div>
 
         </div>
+        <div class="profession-container">
+            
+            <div class="profession-box">
+                <div class="profession">
+
+                </div>
+            </div>
+        </div>
+        <div class="home-img">
+            <img src="img/neon 3.png"
+        </div>
     </section>
 
 
