--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
             <div class="text-animate">
                 <h3>Graphic Designer</h3>
             </div>
-            <p>I’m a passionate graphic designer bringing creative ideas to life through bold visuals, clean layouts, and eye-catching designs. Explore my work and see how creativity meets purpose.”
+            <p>I’m a passionate graphic designer bringing creative ideas to life through bold visuals, clean layouts, and eye-catching designs. Explore my work and see how creativity meets purpose.
             </p>
 
             <div class="btn-box">
@@ -42,10 +42,10 @@
             </div>
 
             <div class="social-media">
-                <a href="#"><i class='bx bxl-facebook' ></i></a>
-                <a href="#"><i class='bx bxl-twitter' ></i></a>
-                <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
-                <a href="#"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://www.facebook.com/vikum.deshan.94/"><i class='bx bxl-facebook' ></i></a>
+                <a href="https://x.com/vikum_deshan"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://www.instagram.com/cyber____warrior/"><i class='bx bxl-instagram-alt' ></i></a>
+                <a href="https://www.linkedin.com/in/vikum-deshan-540b10197/"><i class='bx bxl-linkedin' ></i></a>
                 
             </div>
 
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="home-img">
-            <img src="img/neon 3.png"
+            <img src="img/neon 5.png">
         </div>
     </section>
 
