About page added

--- a/home.html
+++ b/home.html
@@ -31,21 +31,21 @@
             <h3>Hello, I'm </h3>
             <h1>Vikum Deshan</h1>
             <div class="text-animate">
-                <h3>Graphic Designer</h3>
+                <h3 data-text="Graphic Designer">Graphic Designer</h3>
             </div>
             <p>I’m a passionate graphic designer bringing creative ideas to life through bold visuals, clean layouts, and eye-catching designs. Explore my work and see how creativity meets purpose.
             </p>
 
             <div class="btn-box">
-                <a href="#" class="btn">Hire Me</button></a>
-                <a href="#" class="btn">Let's Talk</button></a>
+                <a href="" class="btn">Let's Talk</button></a>
+                <a href="./file/Vikum Deshan_CV .pdf" download="computer" class="btn">Download CV</button></a>
             </div>
 
             <div class="social-media">
-                <a href="https://www.facebook.com/vikum.deshan.94/"><i class='bx bxl-facebook' ></i></a>
-                <a href="https://x.com/vikum_deshan"><i class='bx bxl-twitter' ></i></a>
-                <a href="https://www.instagram.com/cyber____warrior/"><i class='bx bxl-instagram-alt' ></i></a>
-                <a href="https://www.linkedin.com/in/vikum-deshan-540b10197/"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://www.facebook.com/vikum.deshan.94/" target="_blank"><i class='bx bxl-facebook' ></i></a>
+                <a href="https://x.com/vikum_deshan" target="_blank"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://www.instagram.com/cyber____warrior/" target="_blank"><i class='bx bxl-instagram-alt' ></i></a>
+                <a href="https://www.linkedin.com/in/vikum-deshan-540b10197/" target="_blank"><i class='bx bxl-linkedin' ></i></a>
                 
             </div>
 
@@ -60,6 +60,34 @@
         </div>
         <div class="home-img">
             <img src="img/neon 5.png">
+            <!-- <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.19/build/spline-viewer.js"></script>
+<spline-viewer url="https://prod.spline.design/qXE5SKTjzMYL56TU/scene.splinecode"></spline-viewer> -->
+        </div>
+    </section>
+
+
+    <!-- --------about section-------- -->
+
+    <section class="about" id="about">
+        <h2 class="heading">About <span>Me</span></h2>
+            
+        <div class="about-img">
+            <img src="/img/aboutimg.png" alt="about-image">
+            <span class="circle-spin"></span>
+        </div>
+
+        <div class="about-content">
+            <h3>Graphic Designer</h3>
+            <p>Hi, I’m a passionate Graphic Designer with a keen eye for detail and a love for visual storytelling.
+                 I specialize in creating bold, modern, and meaningful designs that help brands stand out. Whether 
+                 it's branding, digital illustrations, or UI/UX elements, I believe design is more than aesthetics—it's 
+                 about solving problems and communicating ideas effectively.With experience in tools like Adobe Creative
+                 Suite, Figma, and Canva, I transform concepts into impactful visuals. My goal? To bring your vision to 
+                 life through creative, functional, and engaging designs.Let’s create something unforgettable.
+            </p>
+            <div class="btn-box btns">
+                <a href="#" class="btn">Read More</a>
+            </div>
         </div>
     </section>
 
