--- a/home.html
+++ b/home.html
@@ -14,9 +14,9 @@
         <a href="#" class="logo">My Portfolio</a>
 
         <nav class="navbar">
-            <a href="#home" class="active">Home</a>
-            <a href="#about">About</a>
-            <a href="#skills">Education</a>
+            <a href="#home" class="section">Home</a>
+            <a href="#about"class="active">About</a>
+            <a href="#education">Education</a>
             <a href="#services">Skills</a>
             <a href="#contact">Contact</a>
             <div class='bx bx-moon' id="darkMode-icon" ></div>
@@ -91,6 +91,47 @@
         </div>
     </section>
 
+    <!-- -----Education----- -->
+
+    <section class="education" id="education">
+        <h2 class="heading">My <span>Education</span></h2>
+
+        <div class="education-row">
+            <div class="education-column">
+                <!-- <h3 class="title">Education</h3> -->
+
+                <div class="education-box">
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class="bx bxs-calendar"></i>2007-2020</div>
+                            <h3>Education - C.W.W.Kannangara Central College</h3>
+                            <p>my school education</p>
+                        </div>
+                    </div>
+
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class="bx bxs-calendar"></i>2007-2020</div>
+                            <h3>Education - C.W.W.Kannangara Central College</h3>
+                            <p>my school education</p>
+                        </div>
+                    </div>
+
+
+
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class="bx bxs-calendar"></i>2007-2020</div>
+                            <h3>Education - C.W.W.Kannangara Central College</h3>
+                            <p>my school education</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </section>
 
     <script src="js/script.js"></script>
 </body>
