--- a/home.html
+++ b/home.html
@@ -360,12 +360,14 @@
             <!-- Right Contact Form -->
             <div class="contact-form">
                 <div class="form-row">
+                    <form action="https://formsubmit.co/vikumdeshan2k01@gmail.com" method="POST">
                     <input type="text" placeholder="First Name">
                     <input type="text" placeholder="Last Name">
                 </div>
                 <input type="email" placeholder="Your Email">
                 <textarea rows="5" placeholder="Your Message"></textarea>
                 <button class="send-btn">Send Message</button>
+                </form>
             </div>
 
         </div>
